--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.24",
     "@fontsource/raleway": "^5.0.16",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.6",
@@ -35,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@yandex/ymaps3-types": "^0.0.23",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
