--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "react-native": "^0.73.6",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
     "yandex-maps": "^0.0.1"
