--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "react-native": "^0.73.6",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
+    "socket.io": "^4.7.5",
     "yandex-maps": "^0.0.1"
   }
 }
