--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-notifications-component": "^4.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5"
   },
