--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2",
     "socket.io": "^4.7.5",
+    "toast": "^0.5.4",
     "yandex-maps": "^0.0.1"
   }
 }
